# NHA-065

./: .env.example  .gitignore  CHAT_FEATURE_GUIDE.md  CONTEXT_AWARENESS_UPGRADE.md  GITHUB_PAGES_SETUP.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART_CHAT.md  QUICK_REFERENCE.md  README.md  README_NEW_FEATURES.md  TESTING_GUIDE.md  WEB_SEARCH_FEATURE.md  WEB_SEARCH_QUICK_START.md  app.py  app_flask.py  config.py  data.db  migrate_to_postgres.py  models.py  pyproject.toml  requirements.txt  setup.sh
chat_logs/: .gitkeep
demo/: README.md  app.js  index.html  style.css
demo/assets/: .gitkeep  README.md
instance/: data.db
models/: __init__.py  chat_history.py  db.py  user.py
models/lora/: .gitkeep
outputs/: .gitkeep
routes/: __init__.py  auth.py  chat.py  generate.py  history.py  model.py  user.py
static/css/: login.css  signup.css  style.css  upgrade.css
static/js/: app.js
templates/: admin.html  index.html  login.html  signup.html  upgrade.html
utils/: chat_history.py  firebase_auth.py  helpers.py  logo_agent.py  mistral_chat.py  model_manager.py
