[project]
name = "zypher-ai-logo-generator"
version = "0.1.0"
description = "Zypher AI Logo Generator with ChatGPT-style interface"
requires-python = ">=3.9"
dependencies = [
    # Web Framework (NEW ChatGPT-style interface)
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    
    # Environment Variables
    "python-dotenv>=1.0.0",
    
    # Core Dependencies (Original Gradio interface)
    "gradio>=4.0.0",
    "torch>=2.0.0",
    "diffusers>=0.25.0",
    "transformers>=4.35.0",
    "accelerate>=0.25.0",
    "safetensors>=0.4.0",
    "peft>=0.7.0",  # Required for LoRA support
    
    # Image Processing
    "pillow>=10.0.0",
    
    # Additional Utilities
    "numpy>=1.24.0",
    "huggingface-hub>=0.19.0",
    
    # API Communication
    "requests>=2.31.0",
    
    # Authentication and database
    "firebase-admin",
    "flask-sqlalchemy",
    "sentencepiece",
    
    # PostgreSQL support
    "psycopg2-binary>=2.9.0",
    
    # Web scraping and search
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
